<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="6"
        tools:ignore="UselessParent">


        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/c"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="0"
            android:layout_column="0"/>
        <Button
            android:id="@+id/btnBracket"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/b"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="0"
            android:layout_column="1"/>
        <Button
            android:id="@+id/btnPercent"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/d"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="0"
            android:layout_column="3"/>
        <Button
            android:id="@+id/btnDivision"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/divide"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="0"
            android:layout_column="4"/>
        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_7"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="1"
            android:layout_column="0"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_8"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="1"
            android:layout_column="1"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_9"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="1"
            android:layout_column="3"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/x"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="1"
            android:layout_column="4"/>
        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_4"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="2"
            android:layout_column="0"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_5"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="2"
            android:layout_column="1"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_6"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="2"
            android:layout_column="3"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/m"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="2"
            android:layout_column="4"/>
        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_1"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="3"
            android:layout_column="0"/>
        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_2"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="3"
            android:layout_column="1"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_3"
            android:layout_columnWeight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="3"
            android:layout_column="3"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/plus"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="3"
            android:layout_column="4"/>
        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/_0"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_row="4"
            android:layout_column="0"/>

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="@string/dot"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/e"
            android:textSize="25sp"
            android:layout_columnWeight="1"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:layout_row="4"
            android:layout_column="4"/>

    </GridLayout>


    

</RelativeLayout>